# agentic-toolkit

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  ai-workspace-manifest.json  publish.ps1
apps/hw-dashboard/: README.md  pyproject.toml
apps/hw-dashboard/analytics/: engine.py  signals.py  store.py
apps/hw-dashboard/api/: server.py
apps/hw-dashboard/collector/: collect.py  fetch_http.py  models.py  paths.py  schema_io.py  webhook_intake.py
apps/hw-dashboard/collector/retailers/: __init__.py  jsonld.py
apps/hw-dashboard/data/: machine_profile.json
apps/hw-dashboard/data/components/: corsair-rm750e-750w.json  ddr5-64gb-6000-cl30.json  rtx-4060-ti-16gb.json  rtx-5070-ti-16gb.json
apps/hw-dashboard/data/seed/: ddr5-64gb-6000-cl30-gskill.seed.jsonl  rtx-4060-ti-16gb-asus.seed.jsonl
apps/hw-dashboard/data/skus/: corsair-rm750e-750w.json  ddr5-64gb-6000-cl30-gskill.json  rtx-4060-ti-16gb-asus.json  rtx-5070-ti-16gb.json
apps/hw-dashboard/schema/: analytics.schema.json  component.schema.json  price_snapshot.schema.json  recommendation.schema.json  seed_price_point.schema.json  sku.schema.json
apps/hw-dashboard/scripts/: detect_machine.ps1  register_nightly.ps1  run_nightly.ps1  seed_demo_data.py
apps/hw-dashboard/tests/: conftest.py  test_analytics.py  test_api.py  test_collector.py  test_schemas.py
apps/hw-dashboard/tests/fixtures/: no_price.html  product_jsonld.html
apps/hw-dashboard/web/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/hw-dashboard/workflows/: upgrade-dashboard.workflow.js
(+464 files in other folders)
