[project]
name = "hw-dashboard"
version = "0.1.0"
description = "Evidence-based PC-hardware upgrade dashboard: price collection, forecasting, and a local API for a single machine."
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "jsonschema>=4.21",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",   # FastAPI TestClient dependency
    "ruff>=0.5",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["collector", "analytics", "api"]
